# Racecar

hypharos_minicar/: CMakeLists.txt
hypharos_minicar/launch/Simulation/: HyphaROS_Simulation_Stage.launch  gmapping.launch
hypharos_minicar/launch/Simulation/maps/: maze.yaml
hypharos_minicar/launch/Simulation/params/carlike/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
hypharos_minicar/launch/Simulation/stage/: maze_carlike.world
hypharos_minicar/launch/Simulation/stage/robots/: carlike_robot.inc
hypharos_minicar/src/: Pure_Pursuit.cpp
mit_racecar_ws/src/racecar/: .ycm_extra_conf.py
mit_racecar_ws/src/racecar/src/art_driver/: package.xml
mit_racecar_ws/src/racecar/src/art_racecar/launch/: Run_car.launch  amcl_nav.launch
mit_racecar_ws/src/racecar/src/art_racecar/launch/includes/: amcl.launch.xml
mit_racecar_ws/src/racecar/src/art_racecar/param/: local_costmap_params.yaml
mit_racecar_ws/src/racecar/src/art_racecar/src/: art_car_controller.cpp
mit_racecar_ws/src/racecar/src/ls01g/launch/: ls01g.launch
mit_racecar_ws/src/racecar/src/rf2o_laser_odometry/: CMakeLists.txt
racecar/src/art_driver/: CMakeLists.txt
racecar/src/art_driver/src/: art_racecar.cpp
racecar/src/art_racecar/: CMakeLists.txt
racecar/src/art_racecar/launch/: car.launch  ls01g_lidar.launch  start_amcl.launch
racecar/src/art_racecar/map/: mymap.yaml
racecar/src/art_racecar/param/: dwa_local_planner_params.yaml  ekf_params.yaml  global_costmap_params.yaml
racecar/src/art_racecar/rviz/: amcl.rviz
racecar/src/hypharos_minicar/: CMakeLists.txt  package.xml
racecar/src/hypharos_minicar/launch/: save_map.sh
racecar/src/hypharos_minicar/launch/Simulation/: HyphaROS_Simulation_Stage.launch  HyphaROS_Simulation_Stage_1.launch  gmapping.launch
racecar/src/hypharos_minicar/launch/Simulation/maps/: maze.yaml
racecar/src/hypharos_minicar/launch/Simulation/params/: rviz.rviz  rviz_navigation.rviz
racecar/src/hypharos_minicar/launch/Simulation/stage/: maze_carlike.world
racecar/src/hypharos_minicar/launch/Simulation/stage/robots/: carlike_robot.inc
racecar/src/hypharos_minicar/launch/map/: mymap.yaml
racecar/src/hypharos_minicar/src/: Pure_Pursuit.cpp  many_goal.cpp  mini_car_controller.cpp  send_goal.cpp
racecar/src/navigation_tutorials/navigation_stage/stage_config/maps/: willow-full-0.05.pgm  willow-full.pgm
racecar/src/rf2o_laser_odometry/src/: CLaserOdometry2D.cpp
racecar_ws/src/racecar_description/urdf/: racecar.gazebo  racecar.xacro
racecar_ws/src/racecar_gazebo/: CMakeLists.txt
racecar_ws/src/racecar_gazebo/config/: gmapping.rviz  racecar_rviz.rviz  teb_local_planner_params.yaml
racecar_ws/src/racecar_gazebo/launch/: gmapping.launch  racecar.launch  racecar_runway.launch  racecar_runway_navigation.launch
racecar_ws/src/racecar_gazebo/map/: map_runway1.pgm  map_runway1.yaml  map_runway2.pgm  map_runway2.yaml
racecar_ws/src/racecar_gazebo/scripts/: gazebo_odometry.py  global_hybrid_A_star.py  path_pursuit.py
racecar_ws/src/racecar_gazebo/src/: Pure_Pursuit.cpp  art_car_controller.cpp  findLine.cpp  many_goal.cpp  mini_car_controller.cpp
racecar_ws/src/racecar_gazebo/worlds/: racecar1.world  racecar1_1.world
racecar_ws/src/system/hokuyo_node/: CMakeLists.txt
(+1 files in other folders)
